@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-07T01:51:01Z",
+  "timestamp" : "2022-05-08T02:05:44Z",
   "count_outdated" : 19,
   "uniques_outdated" : 4,
-  "count" : 23,
-  "uniques" : 6,
+  "count" : 27,
+  "uniques" : 7,
   "views" : [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
