@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "views": [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
