@@ -1,3 +1,9 @@
+2022-05-08T02:05:44Z:
+* notice: last 14d: all unq: 8 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 19 4 / 23 6
+* notice: next accum: outdated-all outdated-unq / all unq: 19 4 / 27 7
+* notice: prev json diff // prev day diff: unq all: +1 +4 / -0 -0 // +1 +4 / -0 -0
+
 2022-05-07T01:51:01Z:
 * notice: last 14d: all unq: 4 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 19 4 / 22 5
